# cpp-experiments

./: CMakeLists.txt
memorylib/: CMakeLists.txt
memorylib/include/memorylib/: i_unique_ptr_tester.hh
memorylib/src/: create_unique_ptr_tester.cc  unique_ptr_tester.cc  unique_ptr_tester.hh
mybin/: CMakeLists.txt  mybin.cpp
mylib/: CMakeLists.txt
mylib/src/: mylib.cpp
mylib/src/impl/: mylib_impl.cpp  mylib_impl.h
